--- a/Verslag/verslagDegrèveMöllmann.tex
+++ b/Verslag/verslagDegrèveMöllmann.tex
@@ -216,17 +216,18 @@ We kunnen wel zien dat steeds Kmax relatief klein zal blijven ten opzichte van h
 
 In figuur 3 zullen we het verband tussen de Kavg en het aantal punten plotten voor 2 dimensies.
 Op de x-as zetten we het aantal punten uit van 250 tot 12279 met een logaritmische functie met basis 1.1.
-Op de y-as zetten we de Kmax uit die in dit geval zal gaan van een minimum van 0,1480 tot en met een maximum van 2,14186.
+Op de y-as zetten we de Kavg uit.
 Op deze plot is duidelijk te herkennen dat Kavg ongeveer constant zal blijven ongeacht het aantal punten.
 In ons experiment was deze constante 1,35.
 We kunnen concluderen dat voor willekeurige puntenverzameling in 2 dimensies de Kavg zeer klein zal zijn in vergelijkign met N.
 
-
-
 In figuur 4 zullen we het verband tussen de Kavg en het aantal punten plotten voor 3 dimensies.
-
-
-
+Op de x-as zetten we het aantal punten uit van 250 tot 12279 met een logaritmische functie met basis 1.1.
+Op de y-as zetten we de Kavg uit.
+Op deze plot zien we een groot contrast als we vergelijken met figuur 3.
+Terwijl wij bij figuur 3 spraken van een een relatief kleine Kavg voor een willekeurge aantal punten, hebben we hier een positief lineair verband.
+We zullen in drie dimensies significant meer afstanden moeten berekenen dan in twee dimensies.
+We kunnen dus zeggen dat vanaf 3 dimensies de efficiëntie van het algoritme al zal afnemen.
 
 
 \begin{figure}
